# game-server-management

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: lint.yml
misc/: backup.sh  dependencies.txt  games.service  start.sh  stop.sh
misc/commands/: cod4.md  ttt_commands  ttt_config
misc/configs/: AbioticFactor.ini  csgo.cfg  factorio-server-settings.json  terraria-config.txt  ttt.cfg
misc/configs/abiotic_factor/: Admin.ini
misc/configs/cod4/: default.cfg  promod.cfg
misc/configs/garrys/: prop_hunt.cfg  ttt.cfg
misc/configs/teeworlds/: README.md  autoexec.cfg  ctf.cfg  dm.cfg  tdm.cfg
scripts/: cod4.rs  cs_go.rs  factorio.rs  garrys.rs  minecraft.rs  ut2004.rs
src/: backup.rs  game_server.rs  lib.rs  log.rs  path.rs  process.rs  secret.rs  tmux.rs  zellij.rs
src/config/: cod4.rs  cs_go.rs  factorio.rs  garrys.rs  mod.rs  terraria.rs
