[package]
name = "game-server-management"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2024"

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
better-panic = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo", "env"] }
dirs = "6"
map-macro = "0.3"
serde = "1"
serde_derive = "1"
shellexpand = "3"
strum = "0.27"
strum_macros = "0.27"
subprocess = "0.2"
toml = "0.8"
