[package]
name = "game-server-management"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2024"

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6"
better-panic = "0.3"
chrono = "0.4"
clap = { version = "4", features = ["derive", "cargo", "env"] }
dirs = "6"
map-macro = "0.3"
serde = "1"
serde_derive = "1"
shellexpand = "3"
strum = "0.27"
strum_macros = "0.27"
toml = "0.9"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "chrono",
  "env-filter",
  "fmt",
  "local-time",
] }
